test/reusable/error/wip/array_in_array.bfr
// ir ã§ assertion failed
main {
  a: array(3) {
    b: array(_) {
      i: index;
      x: cell;
    };
  };
} [
  > a@i:b@i
]